<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="header">What is your bill amount ?</string>
    <string name="action_settings">Settings</string>
    <string name="tipAmt">How much do you want to tip ?</string>
    <string name="split">How many persons to split the check ?</string>
    <string name="goButton">GO</string>
    <string name="tipPercent">10</string>
    <string name="equals">% =</string>
    <string name="totalTip">0</string>
    <string name="NoOfPeople">1</string>
    <string name="totalBill">0</string>
    <string name="splitAmount">0</string>
    <string name="dollar">$</string>
    <string name="totAmtDisplay">Your final bill amount is </string>
    <string name="dollar2">$</string>
    <string name="rateUs">RATE US</string>
  

</resources>
