<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.tipcalculator.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/billAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignStart="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:background="@drawable/backwithborder"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/tipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/billAmount"
        android:layout_below="@+id/billAmount"
        android:layout_marginTop="20dp"
        android:text="@string/tipAmt"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/tipSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tipAmount"
        android:layout_marginTop="22dp"
        android:max="100" 
        android:progress="15"/>

    <TextView
        android:id="@+id/tipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tipSeekBar"
        android:layout_below="@+id/tipSeekBar"
        android:text="@string/tipPercent"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/totalBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/totAmtDisplay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/totalBill"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold" />

     <TextView
         android:id="@+id/totAmtDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tipPercent"
         android:layout_marginTop="36dp"
         android:text="@string/totAmtDisplay"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold" />

     <TextView
         android:id="@+id/equals"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/tipPercent"
         android:layout_alignBottom="@+id/tipPercent"
         android:layout_marginRight="13dp"
         android:layout_toLeftOf="@+id/totalBill"
         android:layout_toRightOf="@id/tipPercent"
         android:text="@string/equals"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         android:textStyle="bold" />

     <TextView
         android:id="@+id/dollar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/equals"
         android:layout_toRightOf="@+id/equals"
         android:text="@string/dollar"
         android:textColor="#FFFFFF"
         android:textSize="40sp"
         android:textStyle="bold" />

     <TextView
         android:id="@+id/totalTip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/dollar"
         android:layout_alignBottom="@+id/dollar"
         android:layout_marginLeft="8dp"
         android:layout_toRightOf="@+id/dollar"
         android:text="@string/totalTip"
         android:textColor="#FFFFFF"
         android:textSize="40sp"
         android:textStyle="bold" />

     <TextView
         android:id="@+id/dollar2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/totalBill"
         android:layout_alignBottom="@+id/totalBill"
         android:layout_alignLeft="@+id/equals"
         android:text="@string/dollar" 
         android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold" />

     <RatingBar
         android:id="@+id/ratingBar1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rateUs"
         android:layout_marginTop="13dp"
         android:numStars="5" />

     <TextView
         android:id="@+id/rateUs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/totalBill"
         android:layout_marginTop="48dp"
         android:layout_toLeftOf="@+id/totalBill"
         android:text="@string/rateUs"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold" />

</RelativeLayout>